Thu Mar 17 18:54:06 EST 2005

	Get joe to compile on irix

	Enable .joe_state file

	Document 'backpath' bad parsing

	Put version number in state file

	Save command line file names in joe_state file

	Fix ufilt (broke with irix fix)

	Fix if (-s ...) in perl

	Parse *rc file only once

Wed Mar 16 11:04:19 EST 2005

	Check if system joerc file is newer than local joerc file.

	Fix line number reporting for joerc file errors.

	Add ! operator to math (factorial and logical not)

	Make ~ expansion occur at user level, not low level.
           (otherwise ~ appears in b->name, which screws up
	   many things unless ~ is really part of the file
	   name).

	Make tab completion work for user names.
	uname() was shadowing a system call.

Tue Mar 15 14:18:53 EST 2005

	Fix processing of joe.1.in -> joe.1 so
	that paths are properly set up.

	Add file changed under us checking.

Mon Mar 14 11:34:56 EST 2005

	Fix some math and first change bugs.
	Allow for file names which begin with +

	Fix bug where menu wasn't being resized.

	Fix processing of joerc.in -> joerc so that
	paths are properly set up (added sed script
	to Makefile.am).

Sun Mar 13 12:39:18 EST 2005

	Fix -mnew and -mold when there are multiple
	files on command line.

	Add optional file locking.

	Add joe() math command.  Executes JOE macro, and 
	returns success value as result.

	Added sys command: execute a shell command with
	I/O connected to terminal, not editor.  Return
	value of shell command is success value of command.

	rdonly flag is available as math variable.

	Added perforce macro.  Fixed some "if" bugs.

Sat Mar 12 00:31:23 EST 2005

	Update other *rc files.
	Fix some marking bugs in jpico.
	Allow colors to be specified in joerc file
	Improve perl again.
	^D in prompts brings up menu
	Fix ^X a in jmacs
	Fix ^X ^I in jmacs (neg arg is broken)

Fri Mar 11 2005  Joe Allen <jhallen@world.std.com>

	Help text points to doc files


Wed Mar  9 2005  Joe Allen <jhallen@world.std.com>
