@@ -137,7 +137,9 @@
 
 -joe_state     Use ~/.joe_state file
 
- -mouse		Enable mouse support
+ -mouse		Enable xterm mouse support.  When enabled, left-click will
+		position the cursor and left-click-drag will select blocks.
+		For normal xterm cut and paste, hold the shift key down.
  -joexterm	If you are using Joe's modified Xterm, which makes -mouse
 
  -bg_text color	Set background color for text, help, menus, prompts and messages.
